use fallback onto getColumn